limit width of invisible chips to prevent accidental clicks

--- a/boudicca.base/publisher-event-html/src/main/resources/static/css/search.css
+++ b/boudicca.base/publisher-event-html/src/main/resources/static/css/search.css
@@ -172,6 +172,8 @@ legend {
 .multiselect-wrapper input[type=checkbox], .chips {
     position: absolute;
     opacity: 0;
+    max-width: 0;
+    overflow: hidden;
 }
 
 input[type=checkbox]:checked + label.chips {
